Body overflow fixes

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -2,6 +2,8 @@
 
 body {
   padding-top: 20px;
+  overflow-y: scroll;
+  overflow-x: auto;
 }
 
 .wrap {
